--------------------------------------------------------------------------------
Changes for 1.9.2

New features:
 - [ZBXNEXT-623] restored support of SQLite3 for use with Zabbix Server and front-end (Alexei)
 - [ZBX-1357] updated Dutch translation; thanks to qix (Richlv)
 - [ZBX-1357] updated Latvian translation (Richlv)
 - [ZBXNEXT-594] Add to zabbix API support for search and filter by rules "ALL" or "ANY" (Vlad)
 - [ZBXNEXT-592] confirmation dialog for scripts (Vedmak)
 - [ZBX-3355] added character field length validation on inserts and updates (KB)
 - [ZBX-3370] updated Russian translation; thanks to zalex_ua and dotneft (Richlv)
 - [ZBX-3338] updated Ukrainian translation; thanks to zalex_ua (Richlv)

Bug fixes:
 - [ZBX-3329] fixed shown last value as "0" in frontend for items that have never been updated (Aly)
 - [ZBX-3436] added missing "Primary POC Screen Name" to Inventory->Hosts (KB)
 - [ZBX-3405] fixed value_type for response code and failed step items when create webcheck (Vedmak)
 - [ZBX-3363] fixed possible crash of server while processing of {HOST.CONN}, {IPADDRESS} and {HOST.DNS} macros (Sasha)
 - [ZBX-3326] add X-Poedit-Basepath header to all locales (Richlv)
 - [ZBX-3369] fixed API return: true in more Classes methods *.update and *.delete (Vlad)
 - [ZBX-3368] fixed custom graphs in screens form prefixed with ':' (Vedmak)
 - [ZBX-3329] fixed last value in latest data, status of triggers, and web monitoring (Vlad)
 - [ZBX-3362] fixed inability to rename trigger (Vlad)
 - [ZBX-1341] fixed password hashes returned over API (Vlad)
 - [ZBX-3367] fixed PHP Fatal error when trying to create screen (Vlad)
 - [ZBX-3354] fixed history clearing (Vlad)
 - [ZBX-3360] fixed simple graph adding to a screen (Vlad)
 - [ZBX-3189] fixed broken trigger dependencies (Vlad)
 - [ZBX-3326] sort po file contents and entries in POTFILES.in, include fuzzy entries in mo files (Richlv)